--- a/helm/ssh-workspace/templates/tests/resource-validation-test.yaml
+++ b/helm/ssh-workspace/templates/tests/resource-validation-test.yaml
@@ -44,17 +44,8 @@ spec:
       # Test Deployment
       echo "Checking Deployment..."
       kubectl get deployment {{ include "ssh-workspace.fullname" . }} -n {{ .Release.Namespace }}
-      
-      # Check if deployment exists and has correct replicas (but don't wait for readiness)
-      DESIRED=$(kubectl get deployment {{ include "ssh-workspace.fullname" . }} -n {{ .Release.Namespace }} -o jsonpath='{.spec.replicas}')
-      CURRENT=$(kubectl get deployment {{ include "ssh-workspace.fullname" . }} -n {{ .Release.Namespace }} -o jsonpath='{.status.replicas}')
-      echo "Deployment replicas: ${CURRENT}/${DESIRED}"
-      
-      if [ "${CURRENT}" = "${DESIRED}" ]; then
-        echo "✓ Deployment has correct number of replicas"
-      else
-        echo "⚠ Deployment replica count mismatch, but pods may still be starting"
-      fi
+      kubectl rollout status deployment/{{ include "ssh-workspace.fullname" . }} -n {{ .Release.Namespace }} --timeout=300s
+      echo "✓ Deployment is ready"
       
       # Test Service
       echo "Checking Service..."
