Revert "Implement comprehensive test framework with matrix testing"
This reverts commit c6e955d545c81bdc86011a22134e6fa18067a4af.

--- a/helm/ssh-workspace/templates/tests/ssh-connection-test.yaml
+++ b/helm/ssh-workspace/templates/tests/ssh-connection-test.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.tests.connectivity.enabled }}
 apiVersion: v1
 kind: Pod
 metadata:
@@ -16,7 +15,6 @@ metadata:
     {{- end }}
 spec:
   restartPolicy: Never
-  serviceAccountName: {{ include "ssh-workspace.fullname" . }}-test
   containers:
   - name: ssh-connection-test
     image: alpine:3.18
@@ -25,59 +23,29 @@ spec:
     - -c
     - |
       set -e
+      echo "Testing SSH connection to workspace..."
       
-      # Install required tools
-      apk add --no-cache openssh-client netcat-openbsd jq
+      # Install OpenSSH client and netcat
+      apk add --no-cache openssh-client netcat-openbsd
       
-      # Source test library if available
-      if [ -f /test-lib/test-lib.sh ]; then
-          source /test-lib/test-lib.sh
-      else
-          # Fallback functions
-          log_test() { echo "[$2] $1: $3"; }
-          print_test_results() { echo "Test completed"; }
+      # Test TCP connection
+      echo "Testing TCP connection..."
+      if ! nc -z {{ include "ssh-workspace.fullname" . }}.{{ .Release.Namespace }}.svc.cluster.local {{ .Values.service.port }}; then
+        echo "Error: Cannot establish TCP connection to SSH service"
+        exit 1
       fi
+      echo "✓ TCP connection successful"
       
-      echo "=== SSH Connectivity Test ==="
-      echo "Strategy: {{ .Values.security.permissionStrategy }}"
-      echo "Security Level: {{ .Values.security.level }}"
+      # Test SSH protocol
+      echo "Testing SSH protocol..."
+      timeout 10 ssh -o BatchMode=yes -o ConnectTimeout=5 -o StrictHostKeyChecking=no \
+        {{ .Values.user.name }}@{{ include "ssh-workspace.fullname" . }}.{{ .Release.Namespace }}.svc.cluster.local \
+        -p {{ .Values.service.port }} echo "SSH test" 2>&1 | grep -q "Permission denied" || {
+        echo "Note: SSH protocol test completed (authentication expected to fail without keys)"
+      }
       
-      # Use enhanced connectivity test if available
-      if command -v test_connectivity_detailed >/dev/null 2>&1; then
-          test_connectivity_detailed
-      else
-          # Fallback to basic test
-          echo "Testing SSH connection to workspace..."
-          
-          # Test TCP connection
-          echo "Testing TCP connection..."
-          if ! nc -z {{ include "ssh-workspace.fullname" . }}.{{ .Release.Namespace }}.svc.cluster.local {{ .Values.service.port }}; then
-            log_test "tcp_connection" "FAIL" "Cannot establish TCP connection to SSH service"
-            print_test_results
-            exit 1
-          fi
-          log_test "tcp_connection" "PASS" "TCP connection successful"
-          
-          # Test SSH protocol
-          echo "Testing SSH protocol..."
-          SSH_RESULT=$(timeout 10 ssh -o BatchMode=yes -o ConnectTimeout=5 -o StrictHostKeyChecking=no \
-            {{ .Values.user.name }}@{{ include "ssh-workspace.fullname" . }}.{{ .Release.Namespace }}.svc.cluster.local \
-            -p {{ .Values.service.port }} echo "SSH test" 2>&1 || true)
-          
-          if echo "$SSH_RESULT" | grep -q "Permission denied"; then
-              log_test "ssh_protocol" "PASS" "SSH service responding correctly (authentication rejected as expected)"
-          elif echo "$SSH_RESULT" | grep -q "SSH test"; then
-              log_test "ssh_protocol" "PASS" "SSH service responding correctly (authentication successful)"
-          else
-              log_test "ssh_protocol" "FAIL" "SSH service not responding as expected: $SSH_RESULT"
-          fi
-      fi
-      
-      print_test_results
-    
-    volumeMounts:
-    - name: test-lib
-      mountPath: /test-lib
+      echo "✓ SSH service is responding correctly"
+      echo "✓ SSH workspace is ready for connections"
     resources:
       limits:
         cpu: 100m
@@ -85,11 +53,3 @@ spec:
       requests:
         cpu: 50m
         memory: 32Mi
-  
-  volumes:
-  - name: test-lib
-    configMap:
-      name: {{ include "ssh-workspace.fullname" . }}-test-lib
-      defaultMode: 0755
-      optional: true
-{{- end }}
