Fix pr-integration workflow by setting pullPolicy=Never for k3d testing
- Fix YAML trailing spaces in values.yaml line 120
- Add image.pullPolicy=Never to helm install in pr-integration workflow
- Ensures locally built images are used in k3d test environment
- Prevents ErrImagePull errors when imagePullPolicy is Always

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -202,6 +202,7 @@ jobs:
           helm upgrade --install ssh-workspace-pr-test helm/ \
             --set image.repository=${{ env.DOCKER_REPO }} \
             --set image.tag=pr-test \
+            --set image.pullPolicy=Never \
             --set ssh.publicKeys.authorizedKeys="$(cat /tmp/test_key.pub)" \
             --wait --timeout=300s
 
