--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -326,7 +326,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository }}
+          images: ghcr.io/${{ github.actor }}/${{ env.DOCKER_REPO }}
           tags: |
             type=ref,event=tag
             type=raw,value=latest
