--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -318,6 +318,12 @@ jobs:
         with:
           version: ${{ env.HELM_VERSION }}
 
+      - name: Download Helm package artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: helm-chart
+          path: dist/
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
