fix: Resolve Dockerfile linting warnings
- Add --no-cache-dir flag to pip install (DL3042)
- Pin podman-compose version to 1.5.0 (DL3013)
- Consolidate consecutive RUN instructions (DL3059)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -98,18 +98,15 @@ RUN ln -s /usr/local/bin/dropbear /usr/bin/dropbear \
     && mv kubectl /usr/local/bin/ \
     && curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose \
     && chmod +x /usr/local/bin/docker-compose \
-    && pip3 install podman-compose
+    && pip3 install --no-cache-dir podman-compose==1.5.0
 
 # Set locale
 ENV LANG=en_US.UTF-8
 ENV LANGUAGE=en_US:en
 ENV LC_ALL=en_US.UTF-8
 
-# Create directories and copy scripts [see:F5K3-SCRIPTPATH] [see:D8M4-SCRIPT]
-RUN mkdir -p /opt/ssh-workspace/bin /etc/dropbear
-
-# Setup container environment [see:H9L2-PODMAN]
-RUN mkdir -p /etc/containers
+# Create directories for scripts and container environment [see:F5K3-SCRIPTPATH] [see:D8M4-SCRIPT] [see:H9L2-PODMAN]
+RUN mkdir -p /opt/ssh-workspace/bin /etc/dropbear /etc/containers
 
 # Copy Podman configuration files (always installed for potential use)
 COPY docker/configs/containers/storage.conf /etc/containers/storage.conf
