--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -64,7 +64,10 @@ user:
   # Group ID [see:A9T3-GID]
   gid: 1000
 
-# Container tools (Podman) are always enabled and configured at build time [see:H9L2-PODMAN]
+# Container tools configuration [see:H9L2-PODMAN]
+containerTools:
+  # Enable Podman and related container tools
+  enabled: true
 
 # User management configuration [see:U4N8-USERDB]
 userManagement:
